# tsfm

./: .gitignore  pyproject.toml
data/: data.csv
docs/: tsfm_presentation.html  tsfm_presentation.qmd
docs/presentation/: template.qmd  tsfm_presentation.html  tsfm_presentation.qmd
docs/presentation/_extensions/metropolis-beamer/: _extension.yml
notebooks/: playground.ipynb  repl.ipynb  tutorial.ipynb
scripts/: 1.autoreg_model.py  2.timesfm.py  3.moirai.py  repl.py
src/tsfm/: __init__.py  data.py  exceptions.py  outputs.py  proxies.py  vis.py
src/tsfm/models/: armodel.py  base.py  chronos.py  chronos2.py  moirai.py  moirai2.py  ols.py
