[project]
name = "tsfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilias Aarab", email = "ilias.aarab@ecb.europa.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "gluonts[torch]",
    "matplotlib>=3.10.3",
    "numpy",
    "pandas",
    "scienceplots>=2.1.1",
    "scipy>=1.11.4",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "uni2ts>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
